# DesignOps-Agentic-Framework

./: .env.example  .gitignore  PRD.md  README.md  coverage.json  proposal-prompts.md  pyproject.toml
.github/prompts/: debug-pass.prompt.md
openspec/: config.yaml
scripts/: bootstrap.sh
src/daf/: __init__.py  archetypes.py  cli.py  interview.py  models.py  session.py  validator.py
src/daf/agents/: codemod.py  (+47 more)
tests/: test_a11y_attribute_extractor.py  test_accessibility_agent.py  test_adr_template_generator.py  test_ai_semantic_layer_crew.py  test_analytics_crew.py  test_archetypes.py  test_aria_generator.py  test_ast_import_scanner.py  test_ast_pattern_matcher.py  test_brand_discovery_agent.py  test_brand_profile_analyzer.py  test_breakage_correlation_agent.py  test_checkpoint_creator.py  test_checkpoint_manager.py  test_circular_ref_detector.py  test_cli_entrypoint.py  test_cli_init.py  test_code_generation_agent.py  test_code_scaffolder.py  test_codemod_agent.py  test_codemod_template_generator.py  test_color_palette_generator.py  test_component_factory_crew.py  test_component_inventory_reader.py  test_composition_agent.py  test_composition_constraint_agent.py  test_composition_rule_engine.py  test_composition_rule_extractor.py  test_confidence_scorer.py  test_config_generator.py  test_context_formatter.py  test_context_serializer_agent.py  test_contrast_safe_pairer.py  test_core_component_agent.py  test_core_component_spec_generator.py  test_coverage_reporter.py  test_crew_sequencer.py  test_crew_stubs.py  test_decision_extractor.py  test_decision_log_reader.py  (+128 more)
(+269 files in other folders)
