[project]
name = "daf"
version = "0.1.0"
description = "DesignOps Agentic Framework — AI-orchestrated design system generation"
requires-python = ">=3.11"
dependencies = [
    "crewai",
    "anthropic",
    "typer[all]",
]

[project.scripts]
daf = "daf.cli:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daf"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
